--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,40 @@
     <version>7.12.0</version>
     <scope>test</scope>
 </dependency>
+
+
+ <!-- ExtentReports 5 -->
+  <dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.1</version>
+  </dependency>
+
     
+<!-- WebDriverManager -->
+<dependency>
+<groupId>io.github.bonigarcia</groupId>
+<artifactId>webdrivermanager</artifactId>
+<version>5.9.2</version>
+</dependency>
+<!-- ExtentReports -->
+<dependency>
+<groupId>com.aventstack</groupId>
+<artifactId>extentreports</artifactId>
+<version>5.1.1</version>
+</dependency>
+<!-- Apache Commons IO (FileUtils) -->
+<dependency>
+<groupId>commons-io</groupId>
+<artifactId>commons-io</artifactId>
+<version>2.15.1</version>
+</dependency>
+
     
+  <dependency>
+  	<groupId>com.testing</groupId>
+  	<artifactId>Mavetest</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  </dependency>
   </dependencies>
 </project>
